--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
         "@babel/preset-react": "^7.13.13",
         "@popperjs/core": "^2.10.2",
         "axios": "^0.25",
-        "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
@@ -24,8 +23,20 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
+        "@mantine/core": "^4.1.3",
+        "@mantine/dates": "^4.1.3",
+        "@mantine/dropzone": "^4.1.3",
+        "@mantine/form": "^4.1.3",
+        "@mantine/hooks": "^4.1.3",
+        "@mantine/modals": "^4.1.3",
+        "@mantine/next": "^4.1.3",
+        "@mantine/notifications": "^4.1.3",
+        "@mantine/prism": "^4.1.3",
+        "@mantine/spotlight": "^4.1.3",
         "@types/react": "^17.0.40",
         "@types/react-dom": "^17.0.13",
+        "bootstrap": "^5.1.3",
+        "dayjs": "^1.11.1",
         "ts-loader": "^9.2.7",
         "typescript": "^4.6.2"
     }
