--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
         "@mantine/notifications": "^4.1.3",
         "@mantine/prism": "^4.1.3",
         "@mantine/spotlight": "^4.1.3",
+        "@reduxjs/toolkit": "^1.8.1",
         "@types/react": "^17.0.40",
         "@types/react-dom": "^17.0.13",
         "bootstrap": "^5.1.3",
         "dayjs": "^1.11.1",
+        "react-icons": "^4.3.1",
+        "react-redux": "^8.0.0",
         "ts-loader": "^9.2.7",
         "typescript": "^4.6.2"
     }
