--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "dayjs": "^1.11.1",
         "react-icons": "^4.3.1",
         "react-redux": "^8.0.0",
+        "tinycolor2": "^1.4.2",
         "ts-loader": "^9.2.7",
         "typescript": "^4.6.2"
     }
