--- a/package.json
+++ b/package.json
@@ -12,17 +12,22 @@
     "devDependencies": {
         "@babel/preset-react": "^7.13.13",
         "@popperjs/core": "^2.10.2",
+        "@types/lodash": "^4.14.182",
+        "@types/react": "^18.0.12",
+        "@types/react-dom": "^18.0.5",
+        "@types/react-grid-layout": "^1.3.2",
         "axios": "^0.25",
         "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "react": "^18.1.0",
+        "react-dom": "^18.1.0",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
+        "@emotion/react": "^11.9.0",
+        "@emotion/styled": "^11.9.3",
         "@mantine/core": "^4.1.3",
         "@mantine/dates": "^4.1.3",
         "@mantine/dropzone": "^4.1.3",
@@ -34,10 +39,11 @@
         "@mantine/prism": "^4.1.3",
         "@mantine/spotlight": "^4.1.3",
         "@reduxjs/toolkit": "^1.8.1",
-        "@types/react": "^17.0.40",
-        "@types/react-dom": "^17.0.13",
         "bootstrap": "^5.1.3",
         "dayjs": "^1.11.1",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
+        "react-grid-layout": "^1.3.4",
         "react-icons": "^4.3.1",
         "react-redux": "^8.0.0",
         "tinycolor2": "^1.4.2",
